# Celestia

./: CMakeLists.txt  TRANSLATORS  celestia.cfg.in  celestia.iss
.github/workflows/: ci.yml
cmake/: FindSteamworks.cmake
fonts/: CMakeLists.txt
po/: ar.po  celestia.pot  ja.po  ka.po  ko.po  zh_CN.po  zh_TW.po
po3/: ar.po  be.po  bg.po  celestia_ui.pot  de.po  el.po  es.po  fr.po  gl.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
shaders/: atmosphere_frag.glsl  atmosphere_vert.glsl  bruneton_lib.glsl  galaxy150_geom.glsl  galaxy_vert.glsl  globular_vert.glsl  srgb_frag.glsl
src/celastro/: CMakeLists.txt  astro.cpp  astro.h  date.h  keplerelements.cpp  keplerelements.h
src/celengine/: CMakeLists.txt  atmfile.cpp  atmfile.h  atmosphere.cpp  atmosphere.h  body.cpp  body.h  brunetonatmosphere.h  cubemapvirtualtex.cpp  cubemapvirtualtex.h  cubespheremesh.cpp  cubespheremesh.h  dsorenderer.cpp  fisheyeprojectionmode.cpp  fisheyeprojectionmode.h  frame.cpp  framebuffer.cpp  framebuffer.h  globular.cpp  glshader.cpp  glsupport.cpp  glsupport.h  heightfield.cpp  heightfield.h  lodspheremesh.cpp  lodspheremesh.h  observer.cpp  observer.h  perspectiveprojectionmode.cpp  perspectiveprojectionmode.h  pointstarrenderer.cpp  pointstarvertexbuffer.cpp  projectionmode.h  rendcontext.cpp  render.cpp  render.h  renderglsl.cpp  renderglsl.h  renderinfo.h  renderlistentry.h  (+19 more)
src/celephem/: orbit.cpp  orbit.h  vsop87.cpp
src/celestia/: CMakeLists.txt  celestiacore.cpp  celestiacore.h  celestiastate.cpp  helper.cpp  hud.cpp  hud.h  textinput.cpp  url.cpp  view.cpp  view.h  windowmetrics.h
src/celestia/gtk/data/: CMakeLists.txt
src/celestia/qt/: CMakeLists.txt  CelestiaQtCommon.cmake  preferences.ui  qtappwin.cpp  qtglwidget.cpp  qtmain.cpp  qtpreferencesdialog.cpp  qtpreferencesdialog.h  sentryintegration.cpp  sentryintegration.h  steamintegration.cpp  steamintegration.h
src/celestia/qt6/: CMakeLists.txt
src/celestia/sdl/: CMakeLists.txt  aboutdialog.cpp  appwindow.cpp  appwindow.h  clipboard.cpp  environment.cpp  environment.h  glcontext.cpp  glcontext.h  gui.cpp  gui.h  helpers.h  sdl_compat.h  sdlmain.cpp  settings.h
src/celimage/: dds.cpp  png.cpp
src/celrender/: CMakeLists.txt  atmosphererenderer.cpp  atmosphererenderer.h  brunetonatmosphererenderer.cpp  brunetonatmosphererenderer.h  brunetonatmosphereresource.cpp  brunetonatmosphereresource.h  galaxyrenderer.cpp  globularrenderer.cpp  largestarrenderer.cpp  rendererfwd.h  vertexobject.cpp  vertexobject.h
src/celrender/gl/: vertexobject.cpp  vertexobject.h
src/celscript/legacy/: command.cpp
src/celscript/lua/: celx.cpp  celx_gl.cpp  celx_misc.cpp  celx_object.cpp  celx_observer.cpp  celx_phase.cpp  glcompat.cpp  glcompat.h
src/celttf/: CMakeLists.txt  fontshaper.h  fontshaper_android.cpp  fontshaper_apple.mm  fontshaper_embedded.cpp  fontshaper_windows.cpp  truetypefont.cpp  truetypefont.h
src/celutil/: color.h  dateformatter.cpp  dateformatter.h  unicode.cpp  unicode.h
